--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,18 @@ coverage==7.6.4
 cron-descriptor==1.4.5
 Django==5.1.3
 django-celery-beat==2.7.0
+django-pytest==0.2.0
 django-timezone-field==7.0
 Faker==30.8.2
+iniconfig==2.0.0
 kombu==5.4.2
+packaging==24.2
 parameterized==0.9.0
+pluggy==1.5.0
 prompt_toolkit==3.0.48
 psycopg2-binary==2.9.10
+pytest==8.3.3
+pytest-django==4.9.0
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
