--- a/requirements.txt
+++ b/requirements.txt
@@ -28,10 +28,13 @@ idna==3.10
 iniconfig==2.0.0
 kombu==5.4.2
 lxml==5.3.0
+numpy==2.1.3
 oscrypto==1.3.0
 packaging==24.2
+pandas==2.2.3
 parameterized==0.9.0
 pillow==11.0.0
+plotly==5.24.1
 pluggy==1.5.0
 prompt_toolkit==3.0.48
 psycopg2-binary==2.9.10
@@ -46,6 +49,7 @@ python-bidi==0.6.3
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+pytz==2024.2
 PyYAML==6.0.2
 qrcode==8.0
 redis==5.2.0
@@ -54,6 +58,7 @@ requests==2.32.3
 six==1.16.0
 sqlparse==0.5.1
 svglib==1.5.1
+tenacity==9.0.0
 tinycss2==1.4.0
 typing_extensions==4.12.2
 tzdata==2024.2
