atualizando o .env.exemple

--- a/.env.exemple
+++ b/.env.exemple
@@ -4,3 +4,9 @@ EMAIL_HOST_PASSWORD = 'yzuy uyju jxpo faxf'
 DJANGO_SUPERUSER_CPF = 'seu cpf'
 DJANGO_SUPERUSER_EMAIL = 'seu email'
 DJANGO_SUPERUSER_PASSWORD = 'sua senha'
+
+SECRET_KEY = 'sua-secret-key'
+DEBUG = 'True'
+
+DATABASE_URL = 'sua-url'
+REDIS_URL = 'sua-url'
