fix: corrigindo problemas nos testes

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,12 +1,13 @@
-EMAIL_HOST_PASSWORD = 'yzuy uyju jxpo faxf'
+EMAIL_HOST_PASSWORD=yzuy uyju jxpo faxf
 
 # Preencha essas variaveis para criação do usuario adiministrados, ele é criado automaticamente após a migração do Banco de Dados
-DJANGO_SUPERUSER_CPF = 'seu cpf'
-DJANGO_SUPERUSER_EMAIL = 'seu email'
-DJANGO_SUPERUSER_PASSWORD = 'sua senha'
+DJANGO_SUPERUSER_CPF=07532634329
+DJANGO_SUPERUSER_EMAIL=kauanrl09@gmail.com
+DJANGO_SUPERUSER_PASSWORD=Kauan0907
 
-SECRET_KEY = 'sua-secret-key'
-DEBUG = 'True'
+ALLOWED_HOSTS=*
+SECRET_KEY=suadaahuçagaiassbkablkçs
+DEBUG=True
 
-DATABASE_URL = 'sua-url'
-REDIS_URL = 'sua-url'
+DATABASE_URL=postgres://<user>:<password><host>:<port>/<db_name>
+REDIS_URL=redis://<host>:<port>
