atualizando dependencias para o deploy

--- a/.env.exemple
+++ b/.env.exemple
@@ -9,5 +9,5 @@ ALLOWED_HOSTS=*
 SECRET_KEY=suadaahuçagaiassbkablkçs
 DEBUG=True
 
-DATABASE_URL=postgres://<user>:<password><host>:<port>/<db_name>
+DATABASE_URL=postgres://<user>:<password>@<host>:<port>/<db_name>
 REDIS_URL=redis://<host>:<port>
