--- a/.env.exemple
+++ b/.env.exemple
@@ -1,4 +1,5 @@
-EMAIL_HOST_PASSWORD=yzuy uyju jxpo faxf
+EMAIL_HOST=seu-email-usado-para-enviar-emails-ao-usuario
+EMAIL_HOST_PASSWORD=senha-ou-codigo
 
 # Preencha essas variaveis para criação do usuario adiministrados, ele é criado automaticamente após a migração do Banco de Dados
 DJANGO_SUPERUSER_CPF=07532634329
